K8S/cloud-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-gateway-app
  labels:
    app: cloud-gateway-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-gateway-app
  template:
    metadata:
      labels:
        app: cloud-gateway-app
    spec:
      containers:
        - name: cloud-gateway-app
          image: ghidiom/web-store-api-gateway:1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-gateway-svc
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
  selector:
    app: cloud-gateway-app
