K8S/customer-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-app
  labels: 
    app: customer-service-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app : customer-service-app
  template:
    metadata:
      labels:
        app: customer-service-app
    spec:
      containers:
      - name: customer-service-app
        image: ghidiom/webstore-customer:1.1
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
---

kind: Service
apiVersion: v1
metadata:
  name:  customer-service-svc
spec:
  selector:
    app:  customer-service-app
  ports:
  - port:  8080
    targetPort:  8080
