K8S/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-app
  labels: 
    app: order-service-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app : order-service-app
  template:
    metadata:
      labels:
        app: order-service-app
    spec:
      containers:
      - name: order-service-app
        image: ghidiom/webstore-order:1.2
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
---

kind: Service
apiVersion: v1
metadata:
  name:  order-service-svc
spec:
  selector:
    app:  order-service-app
  ports:
  - port:  8080
    targetPort:  8080
