K8S/product-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-app
  labels: 
    app: product-service-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app : product-service-app
  template:
    metadata:
      labels:
        app: product-service-app
    spec:
      containers:
      - name: product-service-app
        image: ghidiom/webstore-product:1.2
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
          
---

kind: Service
apiVersion: v1
metadata:
  name:  product-service-svc
spec:
  selector:
    app:  product-service-app
  ports:
  - port:  8080
    targetPort:  8080
