K8S/shoppingcart-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingcart-service-app
  labels: 
    app: shoppingcart-service-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app : shoppingcart-service-app
  template:
    metadata:
      labels:
        app: shoppingcart-service-app
    spec:
      containers:
      - name: shoppingcart-service-app
        image: ghidiom/webstore-shoppingcart:1.1
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
---

kind: Service
apiVersion: v1
metadata:
  name:  shoppingcart-service-svc
spec:
  selector:
    app:  shoppingcart-service-app
  ports:
  - port:  8080
    targetPort:  8080
