K8S/ingress-service.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: entry-ingress 
spec: 
  rules: 
  - http: 
      paths: 
      - path: /* 
        pathType: ImplementationSpecific
        backend:
          service:
            name: cloud-gateway-svc
            port:
              number: 8000
